# OkaySpaceGameEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  launch.bat  launch.sh
.github/: PULL_REQUEST_TEMPLATE.md
build-all/: Makefile
build-cs/: Makefile
build-lua/: Makefile
build-pf/: Makefile
build-win/: Makefile
cmake/: mingw-w64-x86_64.toolchain.cmake
docs/: SCRIPTING.md  accounts.md  animation.md  day_night_cycle.md  editor.md  making_a_game.md  npcs_and_crafting.md  okaysurvival.md  packaging.md  relay.md  scripting.md  steam_release.md  supabase-backend.md  survival_kit.md  ui_html.md  ui_world_space.md  vehicle_controller.md  visual_scripting.md  web_mobile.md
editor/: CMakeLists.txt  EditorState.cpp  EditorState.hpp  main.cpp
engine/: CMakeLists.txt
engine/include/: Okay.hpp
engine/include/okay/AI/: Pathfinding.hpp
engine/include/okay/Animation/: AnimationClip.hpp  AnimationCurve.hpp
engine/include/okay/Audio/: AudioClip.hpp  AudioMixer.hpp
engine/include/okay/Components/: ActionList.hpp  AimIK.hpp  AnimClip.hpp  Animator.hpp  AudioSource.hpp  BlockBuilder.hpp  BuildPiece.hpp  BuilderMode.hpp  Camera.hpp  CameraFollow.hpp  Canvas.hpp  ChainIK.hpp  Character.hpp  CharacterBody.hpp  CharacterController2D.hpp  CharacterController3D.hpp  CharacterIK.hpp  ChestInventory.hpp  CinemachineBrain.hpp  ClickToMoveController.hpp  Consumables.hpp  Crafting.hpp  CraftingMenu.hpp  CraftingStation.hpp  Crosshair.hpp  DayNightCycle.hpp  Destructible.hpp  DollyPath.hpp  Draggable.hpp  EventSystem.hpp  FirstPersonController.hpp  FirstPersonHand.hpp  Flashlight.hpp  FollowTarget2D.hpp  FootIK.hpp  FreeRoamController.hpp  GridInventory.hpp  GridInventoryUI.hpp  Inventory.hpp  InventoryUI.hpp  (+77 more)
engine/include/okay/Core/: Application.hpp  DataAsset.hpp  DataPack.hpp  EventBus.hpp  Game.hpp  Log.hpp  Prefs.hpp  Profiler.hpp  Random.hpp  SaveData.hpp  Scheduler.hpp  Time.hpp
engine/include/okay/ECS/: NetWorld.hpp  NetWorldSync.hpp  SceneBridge.hpp  Systems.hpp  World.hpp
engine/include/okay/Graphics/: Font.hpp  Image.hpp  TtfFont.hpp
engine/include/okay/Input/: Cursor.hpp  Input.hpp
engine/include/okay/Math/: Bounds.hpp  CCD.hpp  Easing.hpp  Fabrik.hpp  Mat4.hpp  Math.hpp  Mathf.hpp  Quat.hpp  Rect.hpp  TwoBoneIK.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
engine/include/okay/Net/: Matchmaking.hpp  NetBackend.hpp  NetOwnership.hpp  NetTransport.hpp  NetworkManager.hpp  Packet.hpp  RelayProtocol.hpp  RelayServer.hpp  SecureChannel.hpp  UdpSocket.hpp
engine/include/okay/Physics/: Collider2D.hpp  Collider3D.hpp  ColliderFit.hpp  ForceMode.hpp  Physics2D.hpp  Physics3D.hpp  PlayerCollision.hpp  Rigidbody2D.hpp  Rigidbody3D.hpp
engine/include/okay/Platform/Account/: Account.hpp  AccountService.hpp
engine/include/okay/Platform/PlayFab/: PlayFabService.hpp
engine/include/okay/Platform/Steam/: Steam.hpp  SteamService.hpp
engine/include/okay/Render/: Color.hpp  ConsoleRenderer.hpp  D3D11Renderer.hpp  D3D12Renderer.hpp  GLRenderer.hpp  Gltf.hpp  Lighting.hpp  Material.hpp  Mesh.hpp  ModelImport.hpp  Renderer.hpp  SoftwareRenderer.hpp
engine/include/okay/Scene/: Component.hpp  GameObject.hpp  Layers.hpp  Scene.hpp  SceneManager.hpp  SceneSerializer.hpp  SceneTemplates.hpp  Transform.hpp  UITemplates.hpp
engine/include/okay/Scripting/: CSharpScriptVM.hpp  LuaScriptVM.hpp  OkayScriptVM.hpp  ScriptUI.hpp  ScriptVM.hpp
engine/include/okay/UI/: UIShape.hpp
engine/include/okay/VisualScript/: NodeGraph.hpp  Nodes.hpp  VsValue.hpp
engine/src/AI/: Pathfinding.cpp
engine/src/Audio/: AudioClip.cpp  AudioMixer.cpp
engine/src/Components/: ActionList.cpp  AnimClip.cpp  Camera.cpp  Character.cpp  CharacterBody.cpp  Draggable.cpp  PlayFabManager.cpp  ScriptComponent.cpp  SpriteRenderer.cpp  SteamManager.cpp  Terrain.cpp  UIBarBind.cpp  UIDocument.cpp  UIDraggable.cpp  UILayoutGroup.cpp  UITextBind.cpp  UITooltip.cpp  VisualScriptComponent.cpp  VoxelTerrain.cpp
engine/src/Core/: Application.cpp  DataAsset.cpp  Prefs.cpp  Scheduler.cpp
engine/src/Graphics/: Font.cpp  Image.cpp  TtfFont.cpp
engine/src/Input/: Input.cpp
engine/src/Net/: NetBackend.cpp  NetTransport.cpp  NetworkManager.cpp  RelayServer.cpp  UdpSocket.cpp
engine/src/Physics/: Physics2D.cpp  Physics3D.cpp
engine/src/Platform/Account/: Account.cpp
engine/src/Platform/PlayFab/: NullPlayFabService.cpp  RestPlayFabService.cpp
engine/src/Platform/Steam/: NullSteamService.cpp  Steam.cpp  SteamworksService.cpp
engine/src/Render/: ConsoleRenderer.cpp  D3D11Renderer.cpp  D3D12Renderer.cpp  GLRenderer.cpp  HumanBaseMeshData.cpp  ModelImport.cpp
engine/src/Scene/: Component.cpp  GameObject.cpp  Scene.cpp  SceneManager.cpp  SceneSerializer.cpp  Transform.cpp
engine/src/Scripting/: CSharpScriptVM.cpp  LuaScriptVM.cpp  OkayScriptVM.cpp  ScriptVM.cpp
engine/src/VisualScript/: NodeGraph.cpp
examples/: CMakeLists.txt
game/: CMakeLists.txt  okaysurvival_gen.cpp
launcher/: CMakeLists.txt  main.cpp
okayui/: CMakeLists.txt
okayui/d3d11_demo/: main.cpp
okayui/include/okay/UI/: OkayUI.hpp  OkayUI_D3D11.hpp
okayui/src/: OkayUI.cpp  OkayUI_D3D11.cpp
player/: CMakeLists.txt  main.cpp
relay/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_2d_expand.cpp  test_3d.cpp  test_account.cpp  test_account_script.cpp  test_actionlist.cpp  test_angular2d.cpp  test_angular3d.cpp  test_anim_ik.cpp  test_anim_layers.cpp  test_animation.cpp  test_animator.cpp  test_animator_edit.cpp  test_animclip.cpp  test_api_expand.cpp  test_assets.cpp  test_audio.cpp  test_block_builder.cpp  test_builder_mode.cpp  test_camera_cine.cpp  test_char_anim.cpp  test_char_anim_events.cpp  test_char_blend.cpp  test_char_editor_parts.cpp  test_char_state_anim.cpp  test_character_parts.cpp  test_charctrl.cpp  test_cinemachine.cpp  test_clicktomove.cpp  test_collider_fit.cpp  test_controllers_ik.cpp  test_core_features.cpp  test_csharp.cpp  test_dataasset.cpp  test_datapack.cpp  test_daynight.cpp  test_destructible.cpp  test_easing.cpp  test_ecs.cpp  test_follow.cpp  (+123 more)
tools/: CMakeLists.txt  gen_textures.cpp
(+56 files in other folders)
